# pedreiro-api

./: Cargo.toml  README.md
client/: Cargo.toml
docker/: Dockerfile
dockerfiles/: Dockerfile
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  deployment.yaml
requests/: local.http
resources/: example.yaml
server/: Cargo.toml
server/src/: command_line.rs  main.rs
server/src/kuberentes_client/: create.rs  helpers.rs  mod.rs  watch.rs
server/src/server/: errors.rs  mod.rs
server/src/server/entities/: create_query_parameter.rs  mod.rs  watch_logs_parameter.rs
server/src/server/routes/: health.rs  mod.rs
server/src/server/routes/jobs/: create.rs  mod.rs  watch.rs
shared/: Cargo.toml
shared/src/: built_image.rs  config_to_job.rs  constants.rs  helpers.rs  lib.rs  pedreiro_image.rs  pedreiro_job.rs  pedreiro_volume.rs
shared/src/entities/: mod.rs  watch_message.rs
shared/src/traits/: image_full_name.rs  mod.rs
