[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

log = "0.4.17"
env_logger = "0.10.0"

anyhow = "1.0.58"
clap = { version = "4.1.7", features = ["derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }

serde_yaml = "0.9.1"