[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

log = "0.4.17"
env_logger = "0.10.0"

anyhow = "1.0.58"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }

k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube = { version = "0.79.0", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

tokio = { version = "1", defaulr-features=false, features = ["macros"] }
actix-web = { version = "4", features = ["rustls"] }

tera = { version = "1", default-features = false }

serde_yaml = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
